fix: fixes alignment for inbox details and adds box shadow to inbox details

--- a/packages/frontend/src/components/PageLayout/pageLayout.module.css
+++ b/packages/frontend/src/components/PageLayout/pageLayout.module.css
@@ -29,7 +29,6 @@
   padding: 0;
   width: 100%;
   margin-right: auto;
-  margin-top: 1rem;
 }
 
 .pageLayout > footer {
