--- a/packages/frontend/src/pages/Inbox/inbox.module.css
+++ b/packages/frontend/src/pages/Inbox/inbox.module.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 0.5rem;
+  padding-top: 1rem;
 
   @media (max-width: 1024px) {
     padding: 1rem;
